unpackaged/main/default/objects/litify_docs__Docrio_Feature__mdt/litify_docs__Docrio_Feature__mdt.object-meta.xml
<CustomObject>
    <label>Docrio Feature</label>
    <pluralLabel>Docrio Features</pluralLabel>
</CustomObject>