unpackaged/main/default/objects/litify_docs__Docrio_Feature__mdt/fields/litify_docs__End_Date__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__End_Date__c</fullName>
    <defaultValue>null</defaultValue>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>