unpackaged/main/default/objects/litify_docs__Docrio_Feature__mdt/fields/litify_docs__Integer_Value__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Integer_Value__c</fullName>
    <defaultValue>null</defaultValue>
    <label>Integer Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>